20100822
	correct handling of mouse focus in sub-widgets of widget windowed in text [issue 241]
20100821
	correct handling of mouse focus in sub-widgets of widget windowed in canvas [issue 241]
20100819
	failed to push Solaris/sparc/include/lib9.h with u64int change [issue 151]
	appl/cmd/ar.b eliminate false error return
20100810
	initial introduction of crypt-*(2) and ipints(2)
	replace keyring.m in module/runt.m by ipints.m and crypt.m; compensate in libinterp and libkeyring by using keyringif.m to generate Keyring's interface
20100802
	various changes held back by accident, notably stackv in stack(1), better diagnostics by cat(1)
20100801
	libtk/coval.c - simplify vlong expression for some compilers [issue 216, mechiel]
20100727
	on Linux and MacOSX, look at faulting address to decide if it's dereference of nil
20100722
	include/bio.h add varargck and repair resulting diagnostics in utils and limbo/ [issue 237, mechiel]
20100719
	appl/cmd/disk/mkfs.b change getname/getpath to cope with missing newline [issue 236]
20100715
	appl/wm/toolbar.b changed not to create new /chan/snarf if one exists, unless -p (private) option given [toolbar(1)]
	utils/cc/macbody - add overlooked change to implement __VA_ARGS__
	other minor updates to the compilers to resync
20100714
	correctly initialise types in utils/cc/sub.c
20100504
	change lib9/strtoull.c for MS
20100503
	updated libmach/8db.c to avoid [] initialisers
20100501
	update libmach to compensate for MS compiler
20100426
	updated libmach
	updated compiler suites (continuing)
20100425
	appl/wm/wm.b shorten processing of wmctl close if client hadn't started
20100406
	fix handling of boundary case in libtk/utils.c
20100402
	add new option OPTflags to libtk for later use
20100325
	more swizzling of libtk for later use. revised radio and check buttons.
20100322
	a few tweaks to Tk for later use
20100320
	appl/lib/json.b dis/lib/json.dis - use %f not string <real-value> to ensure json value acceptable [issue 230, powerman]